# strong

./: .gitignore  LICENSE  README.md  pyproject.toml
strong/: __init__.py  strong.py  type_checker.py
strong/handlers/: __init__.py  handler_callable.py  handler_dict.py  handler_frozenset.py  handler_list.py  handler_literal.py  handler_set.py  handler_tuple.py  handler_union.py
strongpy/: __init__.py  strong.py  type_checker.py
strongpy/containers/: __init__.py  strong_dict.py  strong_list.py
strongpy/handlers/: __init__.py  handler_dict.py  handler_literal.py  handler_set.py  handler_strongdict.py  handler_stronglist.py  handler_tuple.py
tests/: test.py
