[project]
name = "strongpy"
version = "0.1.3"
description = "Runtime type checker"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []
license = "MIT"

[dependency-groups]
dev = [
    "build>=1.4.3",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
    "twine>=6.2.0",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
